--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,9 +1,8 @@
-.rick {
-
+.header {
   width: 100vw;
- display: flex;
- justify-content: center;
+  display: flex;
+  justify-content: center;
   h1 {
-  color: red;
-}
+    color: red;
+  }
 }
