--- a/src/components/character/Character.css
+++ b/src/components/character/Character.css
@@ -1,4 +1,14 @@
 .character {
-
-  
+  margin: 10px;
+  padding: 10px;
+  background-color: grey;
+  border: 4px solid black;
+  text-align: center;
+  img {
+    width: 250px;
+    border: 2px solid; 
+  }
+  h2, h3 {
+    border-bottom: 2px solid black
+  }
 }
